--- a/rabbit-care/sterilisation.html
+++ b/rabbit-care/sterilisation.html
@@ -202,7 +202,7 @@ Various negative behaviors can be seen when rabbits are sexually mature, for exa
         <p>These photos contain sensitive content that people might feel uncomfortable.</p>
         <div class="thumbs">
           <img class="thumb" src="../images/rabbit-care/surgery1.jpeg" data-img-src="../images/rabbit-care/surgery1.jpeg">
-          <img class="thumb" src="../images/rabbit-care/surgery2.jpeg" data-img-src="../images/rabbit-care/surgery2jpeg">
+          <img class="thumb" src="../images/rabbit-care/surgery2.jpeg" data-img-src="../images/rabbit-care/surgery2.jpeg">
           <img class="thumb" src="../images/rabbit-care/surgery3.jpeg" data-img-src="../images/rabbit-care/surgery3.jpeg">
           <img class="thumb" src="../images/rabbit-care/surgery4.jpeg" data-img-src="../images/rabbit-care/surgery4.jpeg">
           <img class="thumb" src="../images/rabbit-care/surgery5.jpeg" data-img-src="../images/rabbit-care/surgery5.jpeg">
