--- a/adoption/homing-cases-matic.html
+++ b/adoption/homing-cases-matic.html
@@ -160,10 +160,10 @@
               <div class="xzoom_container">
                 <img src="../images/Adoption/homing-cases/Matic1.jpeg" alt="michi" class="xzoom" id="xzoom-default">
                 <div class="xzoom-thumbs">
-                  <a href="images/Adoption/homing-cases/Matic1.jpeg">
+                  <a href="../images/Adoption/homing-cases/Matic1.jpeg">
                     <img src="../images/Adoption/homing-cases/Matic1.jpeg" alt="michi" class="xzoom-gallery" width="90" xpreview="../images/Adoption/homing-cases/Matic1.jpeg">
                   </a>
-                  <a href="../images/Adoption/Matic2.jpeg">
+                  <a href="../images/Adoption/homing-cases/Matic2.jpeg">
                     <img src="../images/Adoption/homing-cases/Matic2.jpeg" alt="michi" class="xzoom-gallery" width="90">
                   </a>
                   <a href="../images/Adoption/homing-cases/Matic3.jpeg">
