--- a/adoption/homing-cases.html
+++ b/adoption/homing-cases.html
@@ -160,10 +160,10 @@
               <div class="xzoom_container">
                 <img src="../images/Adoption/homing-cases/michi1.jpeg" alt="michi" class="xzoom" id="xzoom-default">
                 <div class="xzoom-thumbs">
-                  <a href="images/Adoption/homing-cases/michi1.jpeg">
+                  <a href="../images/Adoption/homing-cases/michi1.jpeg">
                     <img src="../images/Adoption/homing-cases/michi1.jpeg" alt="michi" class="xzoom-gallery" width="90" xpreview="../images/Adoption/homing-cases/michi1.jpeg">
                   </a>
-                  <a href="../images/Adoption/michi2.jpeg">
+                  <a href="../images/Adoption/homing-cases/michi2.jpeg">
                     <img src="../images/Adoption/homing-cases/michi2.jpeg" alt="michi" class="xzoom-gallery" width="90">
                   </a>
                   <a href="../images/Adoption/homing-cases/michi3.jpeg">
